# ros_ws

./: README.md
cloud_point_test/: CMakeLists.txt  package.xml
cloud_point_test/PCD/: colored_cloud.pcd
cloud_point_test/launch/: pcd_reader.launch
cloud_point_test/src/: pcd_reader.cpp  point_cloud_pub.cpp
follow_waypoints/: CMakeLists.txt  package.xml
follow_waypoints/src/: MyLineMarker.cpp  Test.cpp  basic_controls.cpp  menu.cpp  moveit_visual_tools_demo.cpp  simple_marker.cpp
me-2900/: Dockerfile  Makefile  README.md  docker-compose.yml  driver.cc  entities.pb.cc  entities.pb.h
me_scancontrol_b/: CMakeLists.txt  README.md  install.sh  package.xml
me_scancontrol_b/common/include/: me_scancontrol_b.h
me_scancontrol_b/common/src/: me_scancontrol_b.cpp
me_scancontrol_b/description/urdf/: scanCONTROL_2600-100.urdf.xacro  scanCONTROL_2600-100_macro.urdf.xacro  scanCONTROL_2900-50.urdf.xacro  scanCONTROL_2900-50_macro.urdf.xacro
me_scancontrol_b/launch/: scanner.launch  test_description.launch  test_description.rviz
me_scancontrol_b/scanCONTROL_Linux_SDK_0.2.0/documentation/: OpManPartB_2900.html
me_scancontrol_b/scanCONTROL_Linux_SDK_0.2.0/examples/Python/: container_mode.py  video_mode.py
me_scancontrol_b/src/: me_scancontrol_b_node.cpp
microepsilon_scancontrol/: CMakeLists.txt  package.xml
microepsilon_scancontrol/common/include/: microepsilon_scancontrol.h
microepsilon_scancontrol/common/src/: microepsilon_scancontrol.cpp
microepsilon_scancontrol/launch/: scanner.launch
microepsilon_scancontrol/misc/scanCONTROL Linux SDK 0.2.0/examples/Python/: circle_fit.py  partial_profiles_callback.py
microepsilon_scancontrol/misc/scanCONTROL_Linux_SDK_0.2.0/documentation/: OpManPartB-2600.html
microepsilon_scancontrol/misc/scanCONTROL_Linux_SDK_0.2.0/examples/Python/: full_profiles_poll.py
microepsilon_scancontrol/ros/src/: microepsilon_scancontrol_node.cpp
microepsilon_scancontrol/src/: microepsilon_scancontrol_node.cpp  test.cpp
modbus_valve_ctr/: CMakeLists.txt  package.xml
modbus_valve_ctr/src/: listener.cpp  listener.cpp.bak  modbus.cpp  trigger.cpp
model_loader/: CMakeLists.txt  cmd  package.xml
model_loader/config/: ObjectSetup.cfg  aircraft_frame_setup.cfg
model_loader/launch/: bagplay.launch  bagplay.rviz  gui.launch  test.rviz
model_loader/model/: platte_mit_schrauben.stl
model_loader/src/: add_and_remove_aircraft_frame.cpp  add_and_remove_object.cpp  scan_reader.cpp  tf_dummy.cpp  tf_test.cpp
model_matcher/: CMakeLists.txt  package.xml
model_matcher/launch/: model_matcher.launch  model_matcher.rviz
model_matcher/model/: platte_mit_schrauben.pcd
model_matcher/src/: surface_matching_test (copy).cpp  surface_matching_test.cpp  template_alignment.cpp
motion_control/: CMakeLists.txt  package.xml
motion_control/config/: Scan Planner.ipynb  do_scan.cfg  do_scan_0.cfg  scan_plan.cfg  target
motion_control/config/.ipynb_checkpoints/: Scan Planner-checkpoint.ipynb
motion_control/launch/: start_motion_control.launch  start_motion_control_b.launch
motion_control/src/: control_node.cpp  control_node_b.cpp  do_scan.cpp  do_scan_b.cpp  motion_control.cpp  move_camera.cpp  move_camera_b.cpp  point_rivet.cpp  point_rivet_b.cpp  pose_test.cpp
object_localizer/: CMakeLists.txt  package.xml  ref.txt
object_localizer/config/: point_rivet.cfg  rivet_localizer.cfg  scan_planner.cfg
object_localizer/launch/: export_image.launch
object_localizer/model/: model.ckpt.index  object_map.pbtxt  pipeline.config
object_localizer/model/model_2/: object_map.pbtxt
object_localizer/src/: box_segmenter.cpp  box_segmenter_b.cpp  cam_pc_processor.cpp  object_detector.py  object_localizer.py  pc_writer.cpp  pcl_merger.cpp  pcl_processor.cpp  profile_merger.cpp  profile_merger_b.cpp  rivet_localizer.cpp  rivet_localizer_b.cpp  rough_localizer.cpp  rough_localizer_b.cpp  scan_planner.cpp  scan_planner_b.cpp
object_localizer_msg/: CMakeLists.txt  package.xml
object_localizer_msg/msg/: BBox_int.msg  BBox_list.msg  Segment_list.msg
opencv_test/: CMakeLists.txt  package.xml  ref.txt
opencv_test/msg/: BBox_list.msg
opencv_test/src/: object_localizer.py  pcl_processor.cpp
pepperl_fuchs/: cmd
pepperl_fuchs/pepperl_fuchs_r2000/: cmd
phasespace/: CMakeLists.txt  package.xml
phasespace/cfg/: ParametersPsOwl.cfg  ParametersTfInfo.cfg  ParametersVisInfo.cfg
phasespace/config/: bottle.yaml  eugen.yaml  stylus.yaml  trackers.yaml
phasespace/include/phasespace/: helpers.h
phasespace/launch/: align_system.launch  bottle.launch  stream_data.launch  stylus.launch  test_system.launch
phasespace/meshes/: camera_body.scad  camera_body.stl
phasespace/src/: ps_align.cpp  ps_owl.cpp  ps_test.cpp  tf_info.cpp  vis_info.cpp
phasespace/support/calibration/: miniwand.json
phasespace_msgs/: CMakeLists.txt  README.md  package.xml
phasespace_msgs/msg/: Button.msg  ButtonsStamped.msg  Marker.msg  MarkersStamped.msg  Peak.msg  PeaksStamped.msg  Rigid.msg  RigidsStamped.msg
pico_flexx_driver/: cmd
pico_flexx_driver/launch/: pico_flexx_driver.launch
realsense-2.0.3/: cmd
syn_ur10_bringup/: CMakeLists.txt  cmd  package.xml
tams_phasespace/: CMakeLists.txt  README.md  cameras.topic.txt  package.xml
tams_phasespace/cfg/: WorkspaceParameters.cfg
tams_phasespace/config/: LineIteractiveMarker.rviz  demo.rviz  demo1.rviz  phasespace_stylus_demo.rviz
tams_phasespace/launch/: LineIteractiveMarker.launch  calibration_visualizer.launch  demo1.launch  demo2.launch  gazebo_stylus_demo.launch  stylus_demo.launch  workspace_visualizer.launch  workspace_visualizer_demo.launch
tams_phasespace/phasespace-examples/: example1.cc  example2.cc  example3.cc
tams_phasespace/src/: LineIteractiveMarker.cpp  LineIteractiveMarker.h  calibration_visualizer.cpp  points_and_lines.cpp  stylus_node.cpp  tams_phasespace.cpp  workspace_visualizer.cpp
tams_phasespace/urdf/: phasespace_calibration_board_instance.xacro  phasespace_calibration_demo.xacro  phasespace_stylus.xacro  phasespace_stylus_demo.xacro  phasespace_stylus_instance.xacro
(+39 files in other folders)
