<?xml version="1.0"?>
<package>
  <name>me_scancontrol_b</name>
  <version>0.2.0</version>
  <description>This package publishes PointCloud2 messages of profiles meassured by a MICRO-EPSILON scanCONTROL laser scanner. It bases on the package from https://github.com/iirob/microepsilon_scancontrol.
  </description>

  <maintainer email="wangyongseu9@gmail.com">Wang Yong</maintainer>
  <author>Wang Yong</author>

  <license>LGPL</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>boost</build_depend>
  <build_depend>glib-2.0</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>aravis-0.6</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>pcl_conversions</build_depend>

  <run_depend>boost</run_depend>
  <run_depend>glib-2.0</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>aravis-0.6</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>pcl_conversions</run_depend>

</package>
