<?xml version="1.0"?>
<package format="2">
    <name>phasespace_msgs</name>
    <version>0.0.0</version>
    <description>The phasespace_msgs package</description>
    <maintainer email="erichter@informatik.uni-hamburg.de">Eugen Richter</maintainer>
    <license>BSD</license>

    <!-- Optional attribute type can be: website, bugtracker, or repository -->
    <!-- <url type="website">http://wiki.ros.org/phasespace_msgs</url> -->

    <author email="erichter@informatik.uni-hamburg.de">Eugen Richter</author>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>geometry_msgs</depend>
    <depend>std_msgs</depend>

    <build_depend>message_generation</build_depend>
    <exec_depend>message_runtime</exec_depend>

    <export>
    </export>
</package>
